commit 1 desde vs

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/control.css">
     <title>Document</title>
+    
 </head>
 
 <body>
     <header>
-        <div>
         <h1>
             ONG AYUDA A UN PELUDO
         </h1>
@@ -48,15 +46,16 @@
         </h4>
         <div class="seccion-animales">
             <div class="gato">
-                <img src="imegenes/gato.png" alt="imagen-gato">
+                <img class="gato" src ="imegenes/gato.png" alt="imagen-gato">
                 <a href="views/gato.html">GATITOS</a>
 
             </div>
+
             <H4>
                 PERRITOS
             </H4>
             <div class="perro">
-                <img src="imegenes/perrito.jpg" alt="imagen-perrito">
+                <img class="perro" src="imegenes/perrito.jpg" alt="imagen-perrito">
                 <a href="views/perro.html">PERRITOS</a>
             </div>
             
